--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ python = "^3.10"
 pylint = "^2.15.10"
 mypy = "^0.991"
 black = {version = "^23.1a1", allow-prereleases = true}
+ipykernel = "^6.21.1"
 
 [build-system]
 requires = ["poetry-core"]
